# csi-project-be

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_TEST_RESULTS.md  COMPLETE_API_LIST.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_MIGRATION_START.md  README.md  alembic.ini  backup_local_db.sh  benchmark.py  check_b2_format.py  dev.db  env  kalamela_admin_utility.py  kalamela_admin_views.py  kalamela_auth_views.py  kalamela_models.py  kalamela_official_views.py  kalamela_urls.py  kalamela_utility.py  logs_result.json  main.py  migrate_production_data.py  pyproject.toml  requirements.txt  seed_data.py  vercel.json
alembic/: env.py
docs/: yuvalokham-fe-integration.md
scripts/: advance_registration_season.py  api_smoke_test.py  audit_payment_alignment.py  audit_registration_payments.py  backfill_approved_paid_amounts.py  backfill_archive_year.py  backfill_post_registration_member_fees.py  backfill_registration_cycles.py  backfill_season_2025_open_2026.py  backfill_season_payments.py  bulk_complete_legacy_registrations.py  check_prod_cycles.py  clear_member_residence.py  compare_db_alignment.py  compare_payment_migration.py  complete_2024_cycles.py  dedupe_unit_details.py  fix_active_season_units.py  migrate_dev_to_prod.py  migrate_ym_data_to_prod.py  normalize_member_genders.py  remove_test_units.py  repair_payment_balances.py  seed_countries_cities.py  seed_location_master.py  seed_states.py  seed_unit_mkdym_eat_00495.py  seed_ym_admin.py  verify_2024_cycles.py  verify_season_state.py
tests/: check_prod_tables.py  clean_prod_db.py  seed_data.py  (+10 more)
(+112 files in other folders)
